# fruitymesh-cli

./: Cargo.toml
src/: main.rs
templates/: GlobalModule.cpp  GlobalModule.h  GlobalModule.json  Output.h  OutputGlobalModule.h  VendorTemplateModule.cpp  VendorTemplateModule.h
