[package]
name = "fruitymesh-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
dialoguer = "0.10.4"
handlebars = "4.3.7"
num = "0.4.0"
num-derive = "0.4.0"
num-traits = "0.2.15"
serde = "1.0.165"
serde_json = "1.0.99"
titlecase = "2.2.1"
